bookinfo/abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      abort:
        percent: 25
        httpStatus: 500
    route:
    - destination:
        host: ratings
        subset: v1
